# microfactory

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  rag.py  tool_definitions.py  tools.py
agents/: pyproject.toml
agents/coordinator/: Dockerfile  a2a_server.py  agent.py  instruction.py
agents/field_service/: Dockerfile  a2a_server.py  agent.py  instruction.py  pyproject.toml
agents/knowledge/: Dockerfile  a2a_server.py  agent.py  instruction.py  pyproject.toml
agents/scheduler/: agent.py  instruction.py
agents/scheduling/: Dockerfile  a2a_server.py  agent.py  instruction.py
app/: Dockerfile  a2a_client.py  app.py  chainlit.md  pyproject.toml
app/.chainlit/: config.toml
data/: README.md
data/bronze/: job_notes.csv  parts_inventory.csv  technician_certifications.csv  technicians.csv  work_order_parts.csv
data/bronze/knowledge_base/company/: customer_communication.md  dispatch_and_escalation.md  job_documentation_standards.md  vehicle_and_equipment_standards.md  warranty_and_compliance.md
data/bronze/knowledge_base/safety/: confined_space_entry.md  (+5 more)
data/bronze/records/: customers.csv  equipment.csv  schedules.csv  work_orders.csv
data/silver/: field_service.db
data/silver/database/: field_service.db
scripts/: create_database.py  create_vectors.py
speak/: pyproject.toml  server.py
tools/database/: Dockerfile  pyproject.toml  server.py
tools/database/src/: tools.py
tools/knowledge_base/: Dockerfile  pyproject.toml  server.py
tools/knowledge_base/src/: tools.py
voice/: pyproject.toml
(+15 files in other folders)
