[project]
name = "microfactory"
version = "0.1.0"
description = "AI Factory: Multi-agent field service operations platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "ipykernel>=7.2.0",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
    "openai>=2.26.0",
    "requests>=2.32.5",
]
