[project]
name = "microfactory"
version = "0.1.0"
description = "AI Factory: Multi-agent field service operations platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
]

[tool.uv.workspace]
members = [
    "tools/database",
    "tools/knowledge_base",
    "agents",
    "app",
    "voice",
]
